--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "symfony/dom-crawler": "^7.2",
         "twbs/bootstrap": "^5.3"
     },
     "require-dev": {
