--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@algolia/autocomplete-js": "^1.19.2",
+        "@algolia/autocomplete-theme-classic": "^1.19.2",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.6"
     }
